UPDATES, add edsense verification code to tag head

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -100,6 +100,7 @@ const socialImageURL = new URL(
       }
     </style>
     <meta name="theme-color" content="" />
+    <meta name="google-adsense-account" content="ca-pub-3982586798741178">
 
     {
       // If PUBLIC_GOOGLE_SITE_VERIFICATION is set in the environment variable,
@@ -116,6 +117,8 @@ const socialImageURL = new URL(
     <!-- <ViewTransitions /> -->
 
     <script is:inline src="/toggle-theme.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178"
+     crossorigin="anonymous"></script>
 
   </head>
   <body>
