UPDATES, ads & button link downloads

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -157,6 +157,19 @@ const ogUrl = new URL(
             <div class="text-center text-skin-accent min-w-[300px]">Advertisement</div>
 
             <div class="my-6">
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178" crossorigin="anonymous"></script>
+              <!-- ad unit 1 -->
+              <ins class="adsbygoogle"
+                  style="display:block"
+                  data-ad-client="ca-pub-3982586798741178"
+                  data-ad-slot="1560677492"
+                  data-ad-format="auto"
+                  data-full-width-responsive="true">
+              </ins>
+              <script>
+                // @ts-ignore
+                (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
             </div>
             
           </div>
