UPDATES, ads div align

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -155,8 +155,8 @@ const ogUrl = new URL(
         <div class="col-span-8 md:col-start-2 md:col-span-6 lg:col-start-6 lg:ml-10 lg:col-span-3 text-skin-base">
           <div class="lg:sticky lg:top-20">
             <div class="text-center text-skin-accent min-w-[300px]">Advertisement</div>
-
-            <div class="my-6">
+            
+            <div class="my-6 text-center" align="center">
               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178" crossorigin="anonymous"></script>
               <!-- ad unit 1 -->
               <ins class="adsbygoogle"
