UPDATES, meta tag & cover image file name

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     <div class="col-span-8 -mt-7 -mx-4">
       <section id="hero" class="max-w-full px-0 grid items-center [&>img]:w-full">
 
-        <img src="/assets/pxfuel.jpeg" alt="hero image">
+        <img src="/assets/pes-2021-mods-patch-scoreboard-kits-stadium.jpeg" alt="hero image">
 
         <div class="px-4 lg:pl-0 lg:mr-0">
           <!-- <h1>PES 2021 patch, mods, tutorial, and more another stuff...</h1> -->
