--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,13 +39,14 @@ const socialImageURL = new URL(
     <!-- General Meta Tags -->
     <title>{title}</title>
     <meta name="title" content={title} />
-    <meta name="description" content={description} />
+    <meta name="description" content={SITE.desc} />
     <meta name="author" content={author} />
     <link rel="sitemap" href="/sitemap-index.xml" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content={title} />
-    <meta property="og:description" content={description} />
+    <meta property="og:description" content={SITE.desc} />
+    <meta property="og:site_name" content={SITE.title} />
     <meta property="og:url" content={canonicalURL} />
     <meta property="og:image" content={socialImageURL} />
 
