--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -188,7 +188,7 @@ const searchList = posts.map(({ data }) => ({
     @apply h-6 w-6 scale-125 fill-skin-base transition-all;
   }
   .nav-main {
-    @apply fixed top-[66px] right-0 bottom-0 left-0 z-30 bg-skin-fill/75 backdrop-blur-md transition-all duration-[1700ms] delay-700 ease-in-out opacity-0 pointer-events-none; 
+    @apply fixed top-[66px] right-0 bottom-0 left-0 z-30 bg-skin-fill/75 backdrop-blur-md transition-opacity duration-[1700ms] delay-700 ease-in-out opacity-0 pointer-events-none; 
     .nav-open & {
       @apply opacity-100 pointer-events-auto duration-500;
       >nav>ul {
