--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -281,11 +281,10 @@ const searchList = posts.map(({ data }) => ({
       @apply
         translate-y-[-67px];
     }
-    /* >div {
+    >div {
       @apply 
-        transition duration-500 ease-in-out
-        h-[67px];
-    } */
+        h-[66px];
+    }
     /* &.small {
       
     } */
