--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
         <h1 class="absolute bottom-1 right-8 sm:bottom-6 max-w-lg lg:max-w-3xl text-right sm:right-12 lg:bottom-16 lg:right-20 text-white max-sm:!text-xl lg:!text-7xl -tracking-wider">
           Enjoy your own journey, 
-          <!-- through football history -->with an <span class="text-skin-accent uppercase">amazing experience</span></h1>
+          <!-- through football history -->with an <span class="text-gradient uppercase font-black -tracking-widest sm:mt-5 inline-block">amazing experience</span></h1>
 
         <div class="px-4 lg:pl-0 lg:mr-0">
           <!-- <h1>PES 2021 patch, mods, tutorial, and more another stuff...</h1> -->
@@ -114,11 +114,11 @@ const socialCount = SOCIALS.filter(social => social.active).length;
           }
         </ul>
         <div class="all-posts-btn-wrapper">
-          <LinkButton href="/posts">
+          <LinkButton href="/posts" className="group inline-block group items-center [&>p]:!m-0 px-5 py-2 !text-skin-inverted [&>p]:!text-skin-inverted hover:!text-skin-accent [&>p>svg]:text-skin-inverted [&>p:hover>svg]:text-skin-accent bg-skin-accent rounded-full !decoration-transparent hover:bg-skin-fill border border-skin-accent transition duration-500 astro-5eunqzkt">
             All Posts
-            <svg xmlns="http://www.w3.org/2000/svg"
+            <svg fill="none" xmlns="http://www.w3.org/2000/svg"
               ><path
-                d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z"
+                d="m11.293 17.293 1.414 1.414L19.414 12l-6.707-6.707-1.414 1.414L15.586 11H6v2h9.586z" fill="currentColor"
               ></path>
             </svg>
           </LinkButton>
