--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -14,7 +14,7 @@ const { href, className, ariaLabel, title, disabled = false, targetNew = false }
 <a
   href={disabled ? "#" : href}
   tabindex={disabled ? "-1" : "0"}
-  class={`group inline-block ${className}`}
+  class={`inline-block ${className}`}
   aria-label={ariaLabel}
   title={title}
   aria-disabled={disabled}
