--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         featuredPosts.length > 0 && (
           <>
             <section id="featured" class="max-w-full px-0">
-              <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black sm:!text-7xl lg:!text-[160px] sm:right-0 sm:!-tracking-widest lg:-mb-14 md:-mr-10 sm:opacity-30">Featured</h2>
+              <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black !text-4xl sm:!text-7xl lg:!text-[160px] sm:right-0 sm:!-tracking-widest lg:-mb-14 md:-mr-10 lg:opacity-50">Featured</h2>
                 <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12">
                   {featuredPosts.map(({ data }) => (
                     <Card
@@ -96,7 +96,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       }
 
       <section id="recent-posts" class="max-w-full px-0">
-        <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black sm:!text-7xl lg:!text-[160px] sm:right-0 sm:!-tracking-widest lg:-mb-14 md:-mr-10 sm:opacity-30">Recent Posts</h2>
+        <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black !text-4xl sm:!text-7xl lg:!text-[160px] sm:right-0 sm:!-tracking-widest lg:-mb-14 md:-mr-10 lg:opacity-50">Recent Posts</h2>
         <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12">
           {
             sortedPosts
