--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,8 @@ const socialImageURL = new URL(
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="canonical" href={canonicalURL} />
     <meta name="generator" content={Astro.generator} />
 
