--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -57,7 +57,7 @@
     prose-h3:italic prose-p:!text-skin-base 
     prose-a:!text-skin-base prose-a:!decoration-dashed prose-a:underline-offset-8
     hover:prose-a:text-skin-accent prose-blockquote:!border-l-skin-accent
-    prose-blockquote:border-opacity-50 prose-blockquote:opacity-80
+    prose-blockquote:border-opacity-50 prose-blockquote:opacity-80 prose-blockquote:!font-bold
     prose-figcaption:!text-skin-base prose-figcaption:opacity-70
     prose-strong:!text-skin-base
 
@@ -122,6 +122,10 @@
   code,
   blockquote {
     word-wrap: break-word;
+  }
+
+  blockquote {
+    @apply font-semibold;
   }
 
   pre > code {
