UPDATES, enhancements & internal ads

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -92,7 +92,7 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
               title={title}
             >
               <div class="group relative inline-block">
-                <svg class="transition hover:fill-skin-accent" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                <svg class="opacity-50 transition hover:fill-skin-accent hover:opacity-100" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
                   <path d="M 11 4 C 7.134 4 4 7.134 4 11 L 4 39 C 4 42.866 7.134 46 11 46 L 39 46 C 42.866 46 46 42.866 46 39 L 46 11 C 46 7.134 42.866 4 39 4 L 11 4 z M 13.085938 13 L 21.023438 13 L 26.660156 21.009766 L 33.5 13 L 36 13 L 27.789062 22.613281 L 37.914062 37 L 29.978516 37 L 23.4375 27.707031 L 15.5 37 L 13 37 L 22.308594 26.103516 L 13.085938 13 z M 16.914062 15 L 31.021484 35 L 34.085938 35 L 19.978516 15 L 16.914062 15 z"></path>
                 </svg>
                 <div id="tooltip-default" role="tooltip" class="mb-1 absolute whitespace-nowrap bottom-full -translate-x-1/2 left-1/2 z-10 invisible inline-block px-3 py-2 text-sm font-medium text-skin-inverted transition-opacity duration-300 bg-skin-accent rounded-lg shadow-sm opacity-0 group-hover:opacity-100 group-hover:visible -translate-y-[7px]">
@@ -103,7 +103,7 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
             </TwitterShareButton>
             <FacebookShareButton>
               <div class="group relative inline-block">
-                <svg class="transition hover:!fill-[#1877F2]" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                <svg class="opacity-50 transition hover:!fill-[#1877F2] hover:opacity-100" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
                   <path d="M25,3C12.85,3,3,12.85,3,25c0,11.03,8.125,20.137,18.712,21.728V30.831h-5.443v-5.783h5.443v-3.848 c0-6.371,3.104-9.168,8.399-9.168c2.536,0,3.877,0.188,4.512,0.274v5.048h-3.612c-2.248,0-3.033,2.131-3.033,4.533v3.161h6.588 l-0.894,5.783h-5.694v15.944C38.716,45.318,47,36.137,47,25C47,12.85,37.15,3,25,3z"></path>
                 </svg>
                 <div id="tooltip-default" role="tooltip" class="mb-1 absolute whitespace-nowrap bottom-full -translate-x-1/2 left-1/2 z-10 invisible inline-block px-3 py-2 text-sm font-medium text-skin-inverted transition-opacity duration-300 bg-skin-accent rounded-lg shadow-sm opacity-0 group-hover:opacity-100 group-hover:visible -translate-y-[7px]">
@@ -114,7 +114,7 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
             </FacebookShareButton>
             <LinkedInShareButton>
               <div class="group relative inline-block">
-                <svg class="transition hover:!fill-[#0A66C2]" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                <svg class="opacity-50 transition hover:!fill-[#0A66C2] hover:opacity-100" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
                   <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"></path>
                 </svg>
                 <div id="tooltip-default" role="tooltip" class="mb-1 absolute whitespace-nowrap bottom-full -translate-x-1/2 left-1/2 z-10 invisible inline-block px-3 py-2 text-sm font-medium text-skin-inverted transition-opacity duration-300 bg-skin-accent rounded-lg shadow-sm opacity-0 group-hover:opacity-100 group-hover:visible -translate-y-[7px]">
@@ -128,7 +128,7 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
               title={title}
             >
               <div class="group relative inline-block">
-                <svg class="transition hover:!fill-[#EA4335]" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                <svg class="opacity-50 transition hover:!fill-[#EA4335] hover:opacity-100" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
                   <path d="M12 23.403V23.39 10.389L11.88 10.3h-.01L9.14 8.28C7.47 7.04 5.09 7.1 3.61 8.56 2.62 9.54 2 10.9 2 12.41v3.602L12 23.403zM38 23.39v.013l10-7.391V12.41c0-1.49-.6-2.85-1.58-3.83-1.46-1.457-3.765-1.628-5.424-.403L38.12 10.3 38 10.389V23.39zM14 24.868l10.406 7.692c.353.261.836.261 1.189 0L36 24.868V11.867L25 20l-11-8.133V24.868zM38 25.889V41c0 .552.448 1 1 1h6.5c1.381 0 2.5-1.119 2.5-2.5V18.497L38 25.889zM12 25.889L2 18.497V39.5C2 40.881 3.119 42 4.5 42H11c.552 0 1-.448 1-1V25.889z"></path>
                 </svg>
                 <div id="tooltip-default" role="tooltip" class="mb-1 absolute whitespace-nowrap bottom-full -translate-x-1/2 left-1/2 z-10 invisible inline-block px-3 py-2 text-sm font-medium text-skin-inverted transition-opacity duration-300 bg-skin-accent rounded-lg shadow-sm opacity-0 group-hover:opacity-100 group-hover:visible -translate-y-[7px]">
@@ -142,7 +142,7 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
               title={title}
             >
               <div class="group relative inline-block">
-                <svg class="transition hover:!fill-[#FF4500]" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                <svg class="opacity-50 transition hover:!fill-[#FF4500] hover:opacity-100" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
                   <path d="M 29 3 C 26.894531 3 24.433594 4.652344 24.0625 12.03125 C 24.375 12.023438 24.683594 12 25 12 C 25.351563 12 25.714844 12.019531 26.0625 12.03125 C 26.300781 7.597656 27.355469 5 29 5 C 29.703125 5 30.101563 5.382813 30.84375 6.1875 C 31.710938 7.128906 32.84375 8.351563 35.0625 8.8125 C 35.027344 8.550781 35 8.269531 35 8 C 35 7.578125 35.042969 7.179688 35.125 6.78125 C 33.75 6.40625 33.023438 5.613281 32.3125 4.84375 C 31.519531 3.984375 30.609375 3 29 3 Z M 41 4 C 38.792969 4 37 5.796875 37 8 C 37 10.203125 38.792969 12 41 12 C 43.207031 12 45 10.203125 45 8 C 45 5.796875 43.207031 4 41 4 Z M 25 14 C 12.867188 14 3 20.179688 3 29 C 3 37.820313 12.867188 45 25 45 C 37.132813 45 47 37.820313 47 29 C 47 20.179688 37.132813 14 25 14 Z M 7.5 14.9375 C 6.039063 14.9375 4.652344 15.535156 3.59375 16.59375 C 1.871094 18.316406 1.515625 20.792969 2.5 22.84375 C 4.011719 19.917969 6.613281 17.421875 9.96875 15.5625 C 9.207031 15.175781 8.363281 14.9375 7.5 14.9375 Z M 42.5 14.9375 C 41.636719 14.9375 40.792969 15.175781 40.03125 15.5625 C 43.386719 17.421875 45.988281 19.917969 47.5 22.84375 C 48.484375 20.792969 48.128906 18.316406 46.40625 16.59375 C 45.347656 15.535156 43.960938 14.9375 42.5 14.9375 Z M 17 23 C 18.65625 23 20 24.34375 20 26 C 20 27.65625 18.65625 29 17 29 C 15.34375 29 14 27.65625 14 26 C 14 24.34375 15.34375 23 17 23 Z M 33 23 C 34.65625 23 36 24.34375 36 26 C 36 27.65625 34.65625 29 33 29 C 31.34375 29 30 27.65625 30 26 C 30 24.34375 31.34375 23 33 23 Z M 16.0625 34 C 16.3125 34.042969 16.558594 34.183594 16.71875 34.40625 C 16.824219 34.554688 19.167969 37.6875 25 37.6875 C 30.910156 37.6875 33.257813 34.46875 33.28125 34.4375 C 33.597656 33.988281 34.234375 33.867188 34.6875 34.1875 C 35.136719 34.503906 35.222656 35.109375 34.90625 35.5625 C 34.789063 35.730469 31.9375 39.6875 25 39.6875 C 18.058594 39.6875 15.210938 35.730469 15.09375 35.5625 C 14.777344 35.109375 14.859375 34.503906 15.3125 34.1875 C 15.539063 34.027344 15.8125 33.957031 16.0625 34 Z"></path>
                 </svg>
                 <div id="tooltip-default" role="tooltip" class="mb-1 absolute whitespace-nowrap bottom-full -translate-x-1/2 left-1/2 z-10 invisible inline-block px-3 py-2 text-sm font-medium text-skin-inverted transition-opacity duration-300 bg-skin-accent rounded-lg shadow-sm opacity-0 group-hover:opacity-100 group-hover:visible -translate-y-[7px]">
@@ -185,6 +185,10 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
             <div class="text-center text-skin-accent min-w-[300px]">Advertisement</div>
             
             <div class="my-6 text-center">
+
+              <div class="ads-slot w-[300px] h-[325px] relative mx-auto">
+                <iframe class="absolute w-full h-full" src="/ads/detikcom/index.html" frameborder="0"></iframe>
+              </div>
               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178" crossorigin="anonymous"></script>
               <!-- ad unit 1 -->
               <ins class="adsbygoogle"
