--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,13 +24,13 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <main id="main-content" class="mx-auto mt-24 w-full grid grid-cols-8 gap-8 px-4 pb-12 z-10 bg-skin-fill">
 
     <div class="col-span-8 -mt-7 -mx-4">
-      <section id="hero" class="aspect-video bg-gradient-to-tr from-[#7366ff] to-75% to-[#37003c] relative max-w-full px-0 !pb-0 mb-4 grid items-center [&>img]:w-full overflow-hidden">
+      <section id="hero" class="aspect-[3/4] sm:aspect-video bg-gradient-to-tr from-[#7366ff] to-75% to-[#37003c] relative max-w-full px-0 !pb-0 mb-4 grid items-center [&>img]:w-full overflow-hidden">
 
-        <img src="/assets/messi.png" alt="hero image" class="absolute top-0 left-[20%] !w-1/2 opacity-25 cover">
-        <img src="/assets/haaland.png" alt="hero image" class="absolute bottom-0 sm:-bottom-16 -left-16 !w-[70%] img">
-        <img src="/assets/Logo_Pes2021.png" alt="hero image" class="absolute top-5 right-8 sm:top-16 sm:right-20 !w-1/4 cover">
+        <img src="/assets/messi.png" alt="hero image" class="absolute top-0 -left-10 sm:left-[20%] sm:!w-1/2 opacity-25 cover">
+        <img src="/assets/haaland.png" alt="hero image" class="absolute bottom-0 sm:-bottom-16 sm:-left-16 !w-[70%] img">
+        <img src="/assets/Logo_Pes2021.png" alt="hero image" class="absolute top-14 right-8 sm:top-16 sm:right-20 !w-1/4 cover">
 
-        <h1 class="absolute bottom-1 right-8 sm:bottom-6 max-w-lg lg:max-w-3xl text-right sm:right-12 lg:bottom-16 lg:right-20 text-white max-sm:!text-xl lg:!text-7xl -tracking-wider">
+        <h1 class="absolute max-sm:mix-blend-luminosity bottom-28 right-8 sm:bottom-6 max-w-lg lg:max-w-3xl text-right sm:right-12 lg:bottom-16 lg:right-20 text-white max-sm:!text-4xl lg:!text-7xl -tracking-wider">
           Enjoy your own journey, 
           <!-- through football history -->with an <span class="text-gradient uppercase font-black -tracking-widest sm:mt-5 inline-block">amazing experience</span></h1>
 
