--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -45,7 +45,7 @@ const { className } = Astro.props;
 
 <style>
   .breadcrumb {
-    @apply relative z-20 mx-auto mt-20 sm:mt-28 mb-8 w-full grid grid-cols-8 gap-8 px-4;
+    @apply relative z-20 mx-auto mt-[87px] sm:mt-28 mb-8 w-full grid grid-cols-8 gap-8 px-4;
   }
   .breadcrumb ul li {
     @apply inline;
