--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -166,7 +166,7 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
           <hr />
 
           <section class="not-prose max-w-full px-0 mt-8">
-            <h2 class="text-gradient pr-4 whitespace-nowrap font-black text-4xl sm:!text-7xl sm:right-0 sm:!-tracking-widest mb-6 pb-2">You Might Like</h2>
+            <h2 class="text-gradient pr-4 whitespace-nowrap font-bold sm:font-black text-4xl sm:!text-7xl sm:right-0 !-tracking-widest mb-6 pb-2">You Might Like</h2>
             <ul class="grid gap-y-0 sm:gap-x-8 text-skin-base lg:gap-x-12 [&>li]:my-3 [&>li>a]:grid-cols-3 [&>li>a]:items-center [&>li>a>.text-article]:col-span-2 [&>li>a>.text-article>h3]:text-lg sm:[&>li>a>.text-article>h3]:text-2xl max-sm:[&>li>a>.image>img]:aspect-square">
               {relatedPosts.map(post => <Card
                 href={`/posts/${slugify(post.data)}/`}
@@ -185,10 +185,12 @@ const relatedPosts = getRelatedPosts(allPosts, slug, tags);
             <div class="text-center text-skin-accent min-w-[300px]">Advertisement</div>
             
             <div class="my-6 text-center">
-
               <div class="ads-slot w-[300px] h-[325px] relative mx-auto">
                 <iframe class="absolute w-full h-full" src="/ads/detikcom/index.html" frameborder="0"></iframe>
               </div>
+            </div>
+
+            <div class="my-6">
               <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3982586798741178" crossorigin="anonymous"></script>
               <!-- ad unit 1 -->
               <ins class="adsbygoogle"
