UPDATES, OPTA widget scripts

--- a/src/pages/football-info.astro
+++ b/src/pages/football-info.astro
@@ -45,12 +45,13 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Footer />
 </Layout>
 
-<script is:inline src="http://widget.cloud.opta.net/v3/v3.opta-widgets.js"></script>
+<script src="https://widgets.statsperform-hosted.com.cn/v3/v3.opta-widgets.js"></script>
 <script>
     var opta_settings = {
             subscription_id: 'd6f4aa0839e0e85f5040a23395bb7e18',
             language: 'en_GB',
-            timezone: 'Europe/London'
+            service_region: 'china',
+            timezone: 'Asia/Jakarta'
         };
 </script>
 
