UPDATES, OPTA widget scripts

--- a/src/pages/football-info.astro
+++ b/src/pages/football-info.astro
@@ -45,7 +45,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Footer />
 </Layout>
 
-<script src="https://widgets.statsperform-hosted.com.cn/v3/v3.opta-widgets.js"></script>
+<script is:inline src="https://widgets.statsperform-hosted.com.cn/v3/v3.opta-widgets.js"></script>
 <script>
     var opta_settings = {
             subscription_id: 'd6f4aa0839e0e85f5040a23395bb7e18',
