UPDATES, astro 4 ! add dep postcss import & nesting  etc

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -123,7 +123,7 @@ const searchList = posts.map(({ data }) => ({
 </div>
 
 
-<style>
+<style is:global>
   #skip-to-content {
     @apply absolute -top-full left-16 z-50 bg-skin-accent px-3 py-2 text-skin-inverted transition-all focus:top-4;
   }
