--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -27,7 +27,7 @@ const next = pageNum < totalPages ? "" : "disabled";
     <ul class="grid gap-y-0 md:grid-cols-2 sm:gap-x-8 lg:gap-x-12">
       {
         posts.map(({ data }) => (
-          <Card href={`/posts/${slugify(data)}`} frontmatter={data} />
+          <Card href={`/posts/${slugify(data)}`} frontmatter={data} secHeading={false} />
         ))
       }
     </ul>
