--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -21,7 +21,7 @@ const { props } = Astro;
 
 <Breadcrumbs />
 <main id="main-content" class="relative">
-  <div class="col-span-8 sm:col-start-2 sm:col-span-6">
+  <div class="col-span-8 lg:col-start-2 lg:col-span-6">
     {
       "titleTransition" in props ? (
         <h1 class={props.className}>
