--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -24,7 +24,7 @@ const next = pageNum < totalPages ? "" : "disabled";
 <Layout title={`Posts | ${SITE.title}`}>
   <Header activeNav="posts" />
   <Main pageTitle="Articles" pageDesc="" className="text-gradient !font-bold sm:!font-black !text-4xl md:!text-7xl lg:!text-[160px] sm:right-0 -tracking-widest md:-mr-10 lg:-mb-14 lg:opacity-50">
-    <ul class="grid gap-y-0 md:grid-cols-2 sm:gap-x-8 lg:gap-x-12">
+    <ul class="grid gap-y-0 md:grid-cols-2 sm:gap-x-8 lg:gap-x-12 [&>li:first-child]:sm:col-span-2 [&>li:first-child>a>span>h3]:text-2xl [&>li:first-child>a>span>h3]:lg:text-5xl [&>li:first-child>a>span>h3]:sm:text-3xl">
       {
         posts.map(({ data }) => (
           <Card href={`/posts/${slugify(data)}`} frontmatter={data} secHeading={false} />
