--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </section>
       <!-- <Hr noPadding={true} /> -->
     </div>
-    <div class="col-span-8 sm:col-start-2 sm:col-span-6 max-w-full px-0">
+    <div class="col-span-8 lg:col-start-2 lg:col-span-6 max-w-full px-0">
       <h2 class="font-black text-4xl mb-4">For all football lovers,</h2>
       <p>
          you must be familiar with the game Pro Evolution Soccer. Therefore, PESMania presents the best add-ons and updates for all PES gamers, to keep them enthusiastic and have high enthusiasm. With this, PESMania also strives to be the best platform for those looking for the best football simulator in the world. 
@@ -79,13 +79,16 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         featuredPosts.length > 0 && (
           <>
             <section id="featured" class="max-w-full px-0">
-              <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black !text-4xl sm:!text-7xl lg:!text-[160px] sm:right-0 !-tracking-widest lg:-mb-14 md:-mr-10 lg:opacity-50">Featured</h2>
-                <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12">
+              <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black !text-4xl sm:!text-7xl lg:!text-[160px] sm:right-0 !-tracking-widest lg:-mb-14 md:-mr-10 lg:opacity-50">
+                Featured
+              </h2>
+                <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12 [&>li:first-child]:sm:col-span-2 [&>li:first-child>a>span>h3]:text-2xl [&>li:first-child>a>span>h3]:lg:text-5xl [&>li:first-child>a>span>h3]:sm:text-3xl">
                   {featuredPosts.map(({ data }) => (
                     <Card
                       href={`/posts/${slugify(data)}`}
                       frontmatter={data}
                       secHeading={false}
+                      desc={false}
                     />
                   ))}
                 </ul>
@@ -96,14 +99,16 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       }
 
       <section id="recent-posts" class="max-w-full px-0">
-        <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black !text-4xl sm:!text-7xl lg:!text-[160px] sm:right-0 !-tracking-widest lg:-mb-14 md:-mr-10 lg:opacity-50">Recent Posts</h2>
-        <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12">
+        <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black !text-4xl sm:!text-7xl lg:!text-[160px] sm:right-0 !-tracking-widest lg:-mb-14 md:-mr-10 lg:opacity-50">
+          Recent Posts
+        </h2>
+        <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12 [&>li:first-child]:sm:col-span-2 [&>li:first-child>a>span>h3]:text-2xl [&>li:first-child>a>span>h3]:lg:text-5xl [&>li:first-child>a>span>h3]:sm:text-3xl">
           {
             sortedPosts
               .filter(({ data }) => !data.featured)
               .map(
                 ({ data }, index) =>
-                  index < 4 && (
+                  index < 5 && (
                     <Card
                       href={`/posts/${slugify(data)}`}
                       frontmatter={data}
