--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
               <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black !text-4xl sm:!text-7xl lg:!text-[160px] sm:right-0 !-tracking-widest lg:-mb-14 md:-mr-10 lg:opacity-50">
                 Featured
               </h2>
-                <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12 [&>li:first-child]:sm:col-span-2 [&>li:first-child>a>span>h3]:text-2xl [&>li:first-child>a>span>h3]:lg:text-5xl [&>li:first-child>a>span>h3]:sm:text-3xl">
+                <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12 [&>li:first-child]:sm:col-span-2 [&>li:first-child>a>span>h3]:text-2xl [&>li:first-child>a>span>h3]:sm:text-3xl [&>li:first-child>a>span>h3]:lg:text-5xl [&>li:first-child>a>span>h3]:lg:!leading-tight">
                   {featuredPosts.map(({ data }) => (
                     <Card
                       href={`/posts/${slugify(data)}`}
@@ -102,7 +102,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
         <h2 class="text-gradient pr-4 whitespace-nowrap sm:!font-black !text-4xl sm:!text-7xl lg:!text-[160px] sm:right-0 !-tracking-widest lg:-mb-14 md:-mr-10 lg:opacity-50">
           Recent Posts
         </h2>
-        <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12 [&>li:first-child]:sm:col-span-2 [&>li:first-child>a>span>h3]:text-2xl [&>li:first-child>a>span>h3]:lg:text-5xl [&>li:first-child>a>span>h3]:sm:text-3xl">
+        <ul class="grid gap-y-0 sm:grid-cols-2 sm:gap-x-8 lg:gap-x-12 [&>li:first-child]:sm:col-span-2 [&>li:first-child>a>span>h3]:text-2xl [&>li:first-child>a>span>h3]:sm:text-3xl [&>li:first-child>a>span>h3]:lg:text-5xl [&>li:first-child>a>span>h3]:lg:!leading-tight">
           {
             sortedPosts
               .filter(({ data }) => !data.featured)
